# phisher-cop

./: .coveragerc  .gitattributes  .gitignore  .python-version  README.md  flake.nix  model.joblib  pyproject.toml  requirements.txt  test.sh
.github/workflows/: format.yml  requirements-txt.yml  tests.yml
feature_data/: __init__.py  suspicious_words.txt  top_domains.txt
models/: random_forest.joblib  svm.joblib
src/: app.py  cli.py  dataset.py  document.py  domain.py  email.py  email_address.py  feature_extract.py  gen_sus_words.py  model.py  phisher_cop.py  tosh.py  train.py  web.py
src/lib/: __init__.py  bktree.py  dataset.py  document.py  domain.py  email.py  email_address.py  feature_data.py  feature_extract.py  model.py
src/static/: styles.css
src/templates/: index.html
src/web/: app.py
src/web/static/: styles.css
src/web/templates/: index.html
tests/: __init__.py  bktree.py  dataset.py  document.py  domain.py  email.py  feature_data.py  feature_extract.py  main.py
