[project]
name = "phisher-cop"
version = "0.1.0"
description = "A simple email phishing detector"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "flask>=3.1.2",
    "lxml>=6.0.1",
    "numpy>=2.3.2",
    "scikit-learn>=1.7.1",
    "tldextract>=5.3.0",
]

[dependency-groups]
dev = [
    "coverage>=7.10.6",
    "ruff>=0.12.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lib"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.ruff.format]
line-ending = "lf"
